# py-image-converter

./: .gitignore  README.md  convert.py  generate-images.ps1  pyproject.toml
.github/workflows/: release-on-pr-close.yml
converter/: __init__.py  atari_palette.py  config.py  dithering.py  edge_detect.py  histogram.py  image_loader.py  main.py  metrics.py  palette.py  pipeline.py  preview.py  quantizer.py  resize.py  sharpen.py  types.py
converter/algorithms/: __init__.py  atkinson.py  base.py  bayer2.py  bayer4.py  bayer8.py  burkes.py  floyd.py  jarvis.py  sierra.py  sierra_lite.py  stucki.py
converter/exporters/: __init__.py  asm_export.py  atari_bin_export.py  atari_dta_export.py  png_export.py  xex_export.py
tests/: test_adaptive.py  test_bin_export.py  test_config.py  test_dithering.py  test_exports.py  test_floyd.py  test_image_loader.py  test_integration.py  test_metrics_preview.py  test_palette.py  test_quantizer_palette.py  test_regression.py  test_resize.py
tests/fixtures/: baselines.json
